Ajustes en primera revisión interna de QA para R3.

--- a/Suma2Lealtad/Views/Afiliado/Filter.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Filter.cshtml
@@ -37,12 +37,12 @@
                             <span id="someID"></span>
                         </div>
 
-                        <div class="editor-label col-md-4 control-label">
+                        @*<div class="editor-label col-md-4 control-label">
                             <br />
                         </div>
                         <div class="editor-field col-md-8">
                             <br />
-                        </div>
+                        </div>*@
 
                         <div class="form-group">
                             <div class="col-md-12 col-btn">
@@ -52,12 +52,12 @@
                             </div>
                         </div>
 
-                        <div class="editor-label col-md-4 control-label">
+                        @*<div class="editor-label col-md-4 control-label">
                             <br />
                         </div>
                         <div class="editor-field col-md-8">
                             <br />
-                        </div>
+                        </div>*@
 
                     </form>
 
