--- a/Suma2Lealtad/Views/Error/SessionExpired.cshtml
+++ b/Suma2Lealtad/Views/Error/SessionExpired.cshtml
@@ -8,5 +8,6 @@
     <h3><b>Su sesión ha expirado</b></h3>
     <p>Disculpe, la sesión ha expirado.</p>
     <p>Esto usualmente ocurre cuando no ha realizado ninguna acción, es necesario ingresar nuevamente con sus credenciales.</p>
+    <a href="@Url.Action("Login", "Home", new { @class = "btn btn-success btn-md" })">Continuar</a>
   </div>
 </div>
