--- a/Suma2Lealtad/Views/Shared/_Layout.cshtml
+++ b/Suma2Lealtad/Views/Shared/_Layout.cshtml
@@ -153,8 +153,7 @@
 
             cod_urbanizacion: { valueNotEquals: " " },
 
-            channelid: { valueNotEquals: " " },
-
+            channelid: { valueNotEquals: "0" },
 
             emailfield: {
               required: true,
