--- a/Suma2Lealtad/Views/Afiliado/Acreditar.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Acreditar.cshtml
@@ -27,13 +27,13 @@
                                 Nombre del Afiliado :
                             </div>
                             <div class="editor-form col-md-6">
-                                @Html.TextBox("name", @Model.name + " " + @Model.lastname1, new { @class = "form-control", @readonly = "true" }) 
+                                @Html.TextBox("name", @Model.name + " " + @Model.lastname1, new { @class = "form-control", @readonly = "true" })
                             </div>
                             <div class="editor-label col-md-4 control-label">
                                 Número de Documento/Cédula :
                             </div>
                             <div class="editor-form col-md-6">
-                               @Html.TextBox("name", @Model.docnumber, new { @class = "form-control", @readonly = "true" }) 
+                                @Html.TextBox("name", @Model.docnumber, new { @class = "form-control", @readonly = "true" })
                             </div>
 
                             <div class="editor-label col-md-4 control-label">
@@ -54,8 +54,8 @@
                         <!-- buttons -->
                         <div class="col-md-12 col-tabla-btn">
                             <div class="pull-right">
-                                @Html.HiddenFor(model => model.docnumber)
-                                <input type="submit" class="btn btn-success btn-md" value="Guardar" />
+                                <a href="@Url.Action("Index", "Afiliado", new { numdoc = @Model.docnumber })" class="btn btn-success btn-md">Regresar</a>
+                                <input type="submit" class="btn btn-success btn-md" value="Acreditar" />
                             </div>
                         </div>
                         <!--// buttons -->
@@ -89,8 +89,7 @@
             return false;
         }
         else {
-            if (valor <= 0)
-            {
+            if (valor <= 0) {
                 spanMessage();
                 document.getElementById('Monto').value = "";
                 document.form.Monto.focus();
