--- a/Suma2Lealtad/Views/Afiliado/Create.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Create.cshtml
@@ -211,91 +211,91 @@
                         <!-- SILVERLIGHT -->
                         <div class="tab-pane" id="tab2">
 
-                            <div class="col-md-12">
-                                <div class="editor-field col-md-10">
-                                    <p class="text-left text-danger">
-                                        Escanee el documento de identidad, o seleccione el archivo si ya está escaneado.
-                                    </p>
+                            <div class="editor-label col-md-10 control-label">
+                                <div class="editor-label col-md-10 control-label">
+                                    <p class="text-left text-danger">Escanee el documento de identidad, o seleccione el archivo si ya está escaneado.</p>
                                 </div>
+                            </div>
+
+                            <div class="col-md-12">
 
                                 @{Html.RenderPartial("SilverlightEscaner");}
 
-                                <div class="col-md-12">
+                                <div class="editor-label col-md-10">
                                     <p class="text-left" id="ElementoControl" style="visibility: hidden">ElementoControl</p>
                                 </div>
 
-                                <div class="col-md-12">
-                                    <div id="capaarchivo">
-                                        Seleccionar archivo:
-                                    <input type="file" name="file" id="file" onchange="ActualizaElementoControl('ElementoControl','Seleccionada', this, '@Model.docnumber')" />
-                                    </div>
-                                    @*<input type="file" name="file" id="file" onchange="ActualizaElementoControl('ElementoControl','Seleccionada', this, '@Model.docnumber')" />*@
+                            </div>
+                            <!--// SILVERLIGHT -->
+
+                            <div class="editor-label col-md-10 control-label">
+                                <div id="capaarchivo" class="editor-label col-md-10 control-label">
+                                    <p class="text-left">Seleccione archivo: </p>
+                                    <input type="file" name="file" id="file" onchange="ActualizaElementoControl('ElementoControl','Seleccionada', this, '@Model.docnumber')"/>
                                 </div>
-
-                                <!-- SECCION PARA VERIFICAR OPERACIONES ESCANER-->
-                                <script src="~/Scripts/jquery-2.1.3.min.js"></script>
-                                <script>
-                                    //$(document).ready(function () {
-                                    //    $("#seccion2").hide();
-                                    //    $("#seccion3").hide();
-                                    //    $("#boton2").hide();
-                                    //    $("#boton3").hide();
-                                    //});
-
-                                    //function Siguiente() {
-                                    //    $("#seccion1").hide();
-                                    //    $("#seccion2").show();
-                                    //    $("#boton1").hide();
-                                    //    $("#boton2").show();
-                                    //}
-
-                                    //function Siguiente2() {
-                                    //    if (VerificarElementoControl("ElementoControl", "Escaneada") == true) {
-                                    //        alert("Error: Debe seleccionar el archivo para cargarlo en el servidor.");
-                                    //    }
-                                    //    else if (VerificarElementoControl("ElementoControl", "Seleccionada") == true) {
-                                    //        $("#seccion2").hide();
-                                    //        $("#seccion3").show();
-                                    //        $("#boton2").hide();
-                                    //        $("#boton3").show();
-                                    //    }
-                                    //    else {
-                                    //        alert("Error: Debe completar Paso 1 y Paso 2 para continuar.");
-                                    //    }
-                                    //}
-
-                                    //function VerificarElementoControl(ElementoControl, ValorDeControl) {
-                                    //    if (document.getElementById(ElementoControl).innerHTML == ValorDeControl)
-                                    //        return true;
-                                    //    else
-                                    //        return false;
-                                    //}
-
-                                    function ActualizaElementoControl(ElementoControl, ValorDeControl, InputFile, Docnumber) {
-                                        var NombreArchivo = InputFile.value.split('\\');
-                                        if (NombreArchivo[NombreArchivo.length - 1] == Docnumber + ".jpg") {
-                                            document.getElementById(ElementoControl).innerHTML = ValorDeControl;
-                                        }
-                                        else {
-                                            alert("El archivo seleccionado no corresponde con el cliente Número de Documento / Cédula: " + Docnumber);
-                                            Borracampofile();
-                                        }
-                                    }
-
-                                    function Borracampofile() {
-                                        var textofuncion = "ActualizaElementoControl('ElementoControl', 'Seleccionada', this, '@Model.docnumber')"
-                                        capa = window.capaarchivo;
-                                        varHTML = '';
-                                        capa.innerHTML = varHTML;
-                                        varHTML += '<input type="file" name="file" id="file" onchange="' + textofuncion + '" />';
-                                        capa.innerHTML = varHTML;
-                                    }
-                                </script>
-                                <!-- FIN SECCION PARA VERIFICAR OPERACIONES -->
-
                             </div>
 
-                            <!--// SILVERLIGHT -->
+                            <!-- SECCION PARA VERIFICAR OPERACIONES ESCANER-->
+                            <script src="~/Scripts/jquery-2.1.3.min.js"></script>
+                            <script>
+                                //$(document).ready(function () {
+                                //    $("#seccion2").hide();
+                                //    $("#seccion3").hide();
+                                //    $("#boton2").hide();
+                                //    $("#boton3").hide();
+                                //});
+
+                                //function Siguiente() {
+                                //    $("#seccion1").hide();
+                                //    $("#seccion2").show();
+                                //    $("#boton1").hide();
+                                //    $("#boton2").show();
+                                //}
+
+                                //function Siguiente2() {
+                                //    if (VerificarElementoControl("ElementoControl", "Escaneada") == true) {
+                                //        alert("Error: Debe seleccionar el archivo para cargarlo en el servidor.");
+                                //    }
+                                //    else if (VerificarElementoControl("ElementoControl", "Seleccionada") == true) {
+                                //        $("#seccion2").hide();
+                                //        $("#seccion3").show();
+                                //        $("#boton2").hide();
+                                //        $("#boton3").show();
+                                //    }
+                                //    else {
+                                //        alert("Error: Debe completar Paso 1 y Paso 2 para continuar.");
+                                //    }
+                                //}
+
+                                //function VerificarElementoControl(ElementoControl, ValorDeControl) {
+                                //    if (document.getElementById(ElementoControl).innerHTML == ValorDeControl)
+                                //        return true;
+                                //    else
+                                //        return false;
+                                //}
+
+                                function ActualizaElementoControl(ElementoControl, ValorDeControl, InputFile, Docnumber) {
+                                    var NombreArchivo = InputFile.value.split('\\');
+                                    if (NombreArchivo[NombreArchivo.length - 1] == Docnumber + ".jpg") {
+                                        document.getElementById(ElementoControl).innerHTML = ValorDeControl;
+                                    }
+                                    else {
+                                        alert("El archivo seleccionado no corresponde con el cliente Número de Documento / Cédula: " + Docnumber);
+                                        Borracampofile();
+                                    }
+                                }
+
+                                function Borracampofile() {
+                                    var textofuncion = "ActualizaElementoControl('ElementoControl', 'Seleccionada', this, '@Model.docnumber')"
+                                    capa = window.capaarchivo;
+                                    varHTML = '';
+                                    capa.innerHTML = varHTML;
+                                    varHTML += '<input type="file" name="file" id="file" onchange="' + textofuncion + '" />';
+                                    capa.innerHTML = varHTML;
+                                }
+                            </script>
+                            <!-- FIN SECCION PARA VERIFICAR OPERACIONES -->
+
                         </div>
 
                         <!-- DIRECCIÓN -->
@@ -481,7 +481,6 @@
 
                     </div>
                     <!--// tab-content -->
-
                 </div>
                 <!--// rootwizard -->
             </form>
