--- a/Suma2Lealtad/Views/Afiliado/ImpresoraImprimirTarjeta.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/ImpresoraImprimirTarjeta.cshtml
@@ -108,9 +108,7 @@
 
                         <div class="col-md-12 col-btn">
                             <div class="pull-right">
-                                @*<a href="@Url.Action("Index", "Afiliado", new { numdoc = Model.docnumber })" class="btn btn-success btn-md">Regresar</a>*@
-
-                                @Html.HiddenFor(model => model.docnumber)
+                                <a href="@Url.Action("Index", "Afiliado", new { numdoc = @Model.docnumber })" class="btn btn-success btn-md">Regresar</a>                                                                
                                 <input id="submit" name="submit" type="submit" class="btn btn-success btn-md" value="Guardar" style="display: none" />
                             </div>
                         </div>
