Segundo QA para R3

--- a/Suma2Lealtad/Views/Afiliado/Create.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Create.cshtml
@@ -222,7 +222,8 @@
                                 @{Html.RenderPartial("SilverlightEscaner");}
 
                                 <div class="editor-label col-md-10">
-                                    <p class="text-left" id="ElementoControl" style="visibility: hidden">ElementoControl</p>
+                                    @*<p class="text-left" id="ElementoControl" style="visibility: hidden">ElementoControl</p>*@
+                                    <p class="text-left" id="ElementoControl" style="display: none">ElementoControl</p>
                                 </div>
 
                             </div>
