--- a/Suma2Lealtad/Views/Afiliado/ReactivarTarjeta.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/ReactivarTarjeta.cshtml
@@ -48,43 +48,47 @@
                                 @Html.TextBox("estatustarjeta", @Model.estatustarjeta, new { @class = "form-control", @readonly = "true" })
                             </div>
 
+                            <div class="editor-label col-md-4 control-label">
+                            </div>
+
+                            <div class="editor-field col-md-6">
+                                <p class="text-left text-danger">
+                                    Advertencia: Esta operación reactivará la tarjeta actual.
+                                </p>
+                            </div>
+
                             <div class="editor-label col-md-4 control-label"></div>
                             <div class="editor-field col-md-6">
                                 <br />
                             </div>
 
-                            <div">
-                                <h3 class="text-left text-danger">Advertencia: Esta operación reactivará la tarjeta actual.</h3>
+                            <!-- buttons -->
+                            <div class="col-md-12 col-tabla-btn">
+                                <div class="pull-right">
+                                    <input type="submit" class="btn btn-success btn-md" value="Reactivar" />
+                                    <a href="@Url.Action("Index", "Afiliado", new { numdoc = Model.docnumber })" class="btn btn-danger btn-md">Cancelar</a>
+                                </div>
                             </div>
+                            <!--// buttons -->
 
                         </div>
 
-                        <div class="editor-label col-md-4 control-label"></div>
-                        <div class="editor-field col-md-6">
-                            <br />
-                        </div>
-
-                        <!-- buttons -->
-                        <div class="col-md-12 col-tabla-btn">
-                            <div class="pull-right">
-                                <a href="@Url.Action("Index", "Afiliado", new { numdoc = Model.docnumber })" class="btn btn-success btn-md">Regresar</a>                                
-                                <input type="submit" class="btn btn-sucess btn-md" value="Reactivar" />
-                            </div>
-                        </div>
-                        <!--// buttons -->
                     </form>
 
                 </div>
                 <!-- panel-body -->
 
             </div>
-            <!-- panel -->
+            <!-- panel panel-default -->
 
         </div>
-        <!-- columns -->
+        <!-- panel -->
 
     </div>
-    <!-- row -->
+    <!-- columns -->
+
+</div>
+<!-- row -->
 
 </div>
 <!-- container -->
