--- a/Suma2Lealtad/Views/Afiliado/Acreditar.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Acreditar.cshtml
@@ -54,8 +54,8 @@
                         <!-- buttons -->
                         <div class="col-md-12 col-tabla-btn">
                             <div class="pull-right">
-                                <a href="@Url.Action("Index", "Afiliado", new { numdoc = @Model.docnumber })" class="btn btn-success btn-md">Regresar</a>
                                 <input type="submit" class="btn btn-success btn-md" value="Acreditar" />
+                                <a href="@Url.Action("Index", "Afiliado", new { numdoc = @Model.docnumber })" class="btn btn-danger btn-md">Cancelar</a>                                
                             </div>
                         </div>
                         <!--// buttons -->
