--- a/Suma2Lealtad/Views/Afiliado/SuspenderTarjeta.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/SuspenderTarjeta.cshtml
@@ -65,8 +65,8 @@
                             <!-- buttons -->
                             <div class="col-md-12 col-tabla-btn">
                                 <div class="pull-right">
-                                    <a href="@Url.Action("Index", "Afiliado", new { numdoc = Model.docnumber })" class="btn btn-success btn-md">Regresar</a>
                                     <input type="submit" class="btn btn-success btn-md" value="Suspender" />
+                                    <a href="@Url.Action("Index", "Afiliado", new { numdoc = Model.docnumber })" class="btn btn-danger btn-md">Cancelar</a>                                    
                                 </div>
                             </div>
                             <!--// buttons -->
