Actualización en Modelo SumaLealtad a partir de ajustes en BD SumaLealtad para R3 Liberado

--- a/Suma2Lealtad/Views/Afiliado/Acreditar.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Acreditar.cshtml
@@ -33,7 +33,7 @@
                                 Número de Documento/Cédula :
                             </div>
                             <div class="editor-form col-md-6">
-                                @Html.TextBox("name", @Model.docnumber, new { @class = "form-control", @readonly = "true" })
+                                @Html.TextBox("docnumber", @Model.docnumber, new { @class = "form-control", @readonly = "true" })
                             </div>
 
                             <div class="editor-label col-md-4 control-label">
