--- a/Suma2Lealtad/Views/Afiliado/Create.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Create.cshtml
@@ -37,9 +37,10 @@
 
                             @Html.HiddenFor(model => model.id)
                             @Html.HiddenFor(model => model.reasonsid)
-                            @Html.HiddenFor(model => model.type)
+                            @*@Html.HiddenFor(model => model.type)*@
                             @Html.HiddenFor(model => model.clientid)
                             @Html.HiddenFor(model => model.typeid)
+                            @Html.HiddenFor(model => model.WebType)
 
                             <div class="editor-label col-md-4 control-label">
                                 * Número de Documento/Cédula :
