--- a/Suma2Lealtad/Views/Afiliado/ImpresoraImprimirTarjeta.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/ImpresoraImprimirTarjeta.cshtml
@@ -74,7 +74,7 @@
 
                         <!-- SECCION PARA VERIFICAR OPERACIONES Impresora-->
                         <div class="col-md-12">
-                            <p class="text-left" id="ElementoControl" style="visibility: hidden">ElementoControl</p>
+                            <p class="text-left" id="ElementoControl" style="display: none">ElementoControl</p>
                         </div>
 
                         <!-- SilverLight -->
